cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project( roboy_moveit_configs )

add_subdirectory( myo_test_bed_1dof_moveit_config )
add_subdirectory( myo_test_bed_2dof_moveit_config )
add_subdirectory( myo_test_bed_4dof_moveit_config )
add_subdirectory( planar_2r_xz_moveit_config )
add_subdirectory( roboy_2_0_head_simplified_moveit_config )
add_subdirectory( roboy_2_0_left_arm_elbow_moveit_config )
add_subdirectory( roboy_2_0_left_arm_simplified_moveit_config )
add_subdirectory( roboy_2_0_simplified_moveit_config )
add_subdirectory( roboy_2_0_xylophone_moveit_config )
add_subdirectory( roboy_hand_left_moveit_config )
add_subdirectory( roboy_vr_booth_moveit_config )
add_subdirectory( roboy_xylophone_left_arm_ikfast_look3d_hand_left_plugin )
add_subdirectory( roboy_xylophone_left_arm_moveit_config )
add_subdirectory( planar_2r_xz_moveit_config )
